--- a/mutant-swarm-test-junit4/pom.xml
+++ b/mutant-swarm-test-junit4/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.expediagroup.dataplatform</groupId>
+    <groupId>io.github.hiverunner</groupId>
     <artifactId>mutant-swarm-test-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
