update versions and reproduce error

--- a/mutant-swarm-test-junit4/pom.xml
+++ b/mutant-swarm-test-junit4/pom.xml
@@ -20,7 +20,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.hotels</groupId>
+      <groupId>io.github.hiverunner</groupId>
       <artifactId>mutant-swarm</artifactId>
       <exclusions>
         <exclusion>
