--- a/mutant-swarm-test-junit4-and-5/pom.xml
+++ b/mutant-swarm-test-junit4-and-5/pom.xml
@@ -13,7 +13,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.hotels</groupId>
+      <groupId>io.github.hiverunner</groupId>
       <artifactId>mutant-swarm</artifactId>
     </dependency>
     <dependency>
