--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <junit4.version>4.13</junit4.version>
     <junit.platform.launcher.version>1.4.2</junit.platform.launcher.version>
     <license.maven.plugin.version>4.1</license.maven.plugin.version>
+        <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
   </properties>
 
   <scm>
@@ -66,18 +67,32 @@
           </execution>
         </executions>
       </plugin>
+      
+            <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.plugin.version}</version>
+      </plugin>
     </plugins>
   </build>
   
-<!--   <dependencies>
-<dependency>
+<dependencies>
+<!-- <dependency>
     <groupId>com.klarna</groupId>
     <artifactId>hiverunner</artifactId>
     <version>6.0.1</version>
     <scope>test</scope>
+</dependency> -->
+
+
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M5</version>
 </dependency>
+
   
-  </dependencies> -->
+  </dependencies> 
 
   <dependencyManagement>
     <dependencies>
