--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
           </dependency>
         </dependencies>
         <configuration>
-          <header>license/APACHE-2.txt</header>
+          <header>src/main/license/APACHE-2.txt</header>
           <aggregate>true</aggregate>
           <properties>
             <owner>The HiveRunner Contributors</owner>
@@ -76,14 +76,6 @@
       
     </plugins>
   </build>
-
-  <dependencies>
-    <dependency>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-surefire-plugin</artifactId>
-      <version>3.0.0-M5</version>
-    </dependency>
-  </dependencies>
 
   <dependencyManagement>
     <dependencies>
